[gd_scene load_steps=12 format=3 uid="uid://bes0bn2uen0m3"]

[ext_resource type="Texture2D" uid="uid://drha36jrow46o" path="res://sprites/screenWipe.png" id="1_dlmty"]
[ext_resource type="Script" uid="uid://cjdger0w7k3tr" path="res://scenes/boss.gd" id="1_neq0i"]
[ext_resource type="AudioStream" uid="uid://6tsacgg4xiq5" path="res://sounds/explosion (3).wav" id="3_jncid"]
[ext_resource type="AudioStream" uid="uid://c6mwfsaqprvtm" path="res://sounds/sci-fi-charge-up-37395.wav" id="3_qnbj4"]
[ext_resource type="AudioStream" uid="uid://iya10hrcfgmn" path="res://sounds/hitHurt (2).wav" id="5_r3bxh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jncid"]

[sub_resource type="Gradient" id="Gradient_dlmty"]
offsets = PackedFloat32Array(0, 0.133603, 0.145749, 0.352227, 0.368421, 0.578947, 0.595142, 0.805668, 0.821862, 1)
colors = PackedColorArray(0.0627451, 0.0784314, 0.121569, 1, 0.0627451, 0.0784314, 0.121569, 1, 0.0627451, 0.0784314, 0.121569, 1, 0.0823529, 0.113725, 0.156863, 1, 0.0891386, 0.124212, 0.166116, 1, 0.12549, 0.180392, 0.215686, 1, 0.138278, 0.194714, 0.228474, 1, 0.223529, 0.290196, 0.313726, 1, 0.352941, 0.408497, 0.428105, 1, 1, 1, 1, 1)

[sub_resource type="Curve" id="Curve_jncid"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0727665), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r3bxh"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("3_qnbj4")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qnbj4"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("3_jncid")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wqpjq"]
random_pitch = 2.0
streams_count = 1
stream_0/stream = ExtResource("5_r3bxh")

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_neq0i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-10, 0)
scale = Vector2(9.19399, 9.19399)
shape = SubResource("CircleShape2D_jncid")

[node name="Boss" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Boss"]
position = Vector2(-1, 0)
scale = Vector2(2.04, 2.04)
amount = 50
texture = ExtResource("1_dlmty")
lifetime = 1.54
lifetime_randomness = 0.05
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, -980)
scale_amount_max = 4.0
color_ramp = SubResource("Gradient_dlmty")

[node name="Sprite2D" type="Sprite2D" parent="Boss"]
position = Vector2(-12, 4.76837e-07)
scale = Vector2(3.52, 3.52)
texture = ExtResource("1_dlmty")

[node name="RotOff" type="Node2D" parent="Boss/Sprite2D"]
scale = Vector2(-1, -1)

[node name="Sprite2D" type="Sprite2D" parent="Boss/Sprite2D/RotOff"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-9.375, -2.38419e-07)
scale = Vector2(0.545454, 0.545454)
texture = ExtResource("1_dlmty")

[node name="Marker2D" type="Marker2D" parent="Boss/Sprite2D/RotOff/Sprite2D"]
position = Vector2(1.13249e-06, 1.88748e-07)
scale = Vector2(-0.521, -0.521)

[node name="Tell" type="CPUParticles2D" parent="Boss/Sprite2D/RotOff"]
position = Vector2(-9.375, -1.35465e-07)
rotation = 3.14159
scale = Vector2(0.284182, 0.284182)
emitting = false
amount = 32
speed_scale = 3.0
emission_shape = 1
emission_sphere_radius = 128.0
particle_flag_align_y = true
spread = 59.69
gravity = Vector2(0, 0)
radial_accel_min = -200.0
radial_accel_max = 2.72
scale_amount_min = 4.0
scale_amount_max = 14.0
scale_amount_curve = SubResource("Curve_jncid")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Boss/Sprite2D/RotOff/Tell"]
stream = SubResource("AudioStreamRandomizer_r3bxh")

[node name="hurtSFX" type="AudioStreamPlayer2D" parent="Boss"]
stream = SubResource("AudioStreamRandomizer_qnbj4")
volume_db = -15.0

[node name="LASER" type="AudioStreamPlayer2D" parent="Boss/hurtSFX"]
stream = SubResource("AudioStreamRandomizer_wqpjq")
volume_db = -10.0

[node name="moveOver" type="Timer" parent="."]
one_shot = true

[node name="volleyTimer" type="Timer" parent="moveOver"]

[node name="waveTimer" type="Timer" parent="moveOver/volleyTimer"]

[node name="tellTimer" type="Timer" parent="moveOver/volleyTimer/waveTimer"]
one_shot = true

[connection signal="finished" from="Boss/Sprite2D/RotOff/Tell" to="." method="_on_tell_finished"]
[connection signal="timeout" from="moveOver" to="." method="_on_move_over_timeout"]
[connection signal="timeout" from="moveOver/volleyTimer/waveTimer/tellTimer" to="." method="_on_tell_timer_timeout"]
